<resources>
    <string name="app_name">RATAN777</string>
    <string name="app_name_full">RATAN777 GAMES</string>
    <string name="app_desc">Play game and earn money</string>
    <string name="youtube_api_key">AIzaSyASO4qXp86ueqd8jfb77VT95IDK0z8i2gA</string>
    <string name="autopay_url">https://pay.autopay.co.in/api/</string>
    <string name="autopay_mid">dadf1c37-b47f-492d-a496-40b6154f7131</string>
    <string name="autopay_key">84e98f39-8c72-49ba-8e17-49b3530a81c7</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="how_to_play">How To Play</string>
    <string name="how_to_play_desc">Simply Download Our Application from Play Store. Register with your Mobile Number, Username and Email Id with RATAN777. Login into the Application using username and password. Select The Main type then the Game type then Select your favourite number and play the game.</string>
    <string name="kuberapp">RATAN777</string>
    <string name="password">Password</string>
    <string name="login_with_mpin">Login With Mpin </string>
    <string name="or">Or</string>
    <string name="create_profile">Create Profile</string>
    <string name="user_name">User Name</string>
    <string name="your_password">Your password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="city">City</string>
    <string name="add_address_details">Add Address Details</string>
    <string name="add_address">Add Address</string>
    <string name="account_number">Account number</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="bank_name">Bank name</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="add_paytm_details">Add Paytm Details</string>
    <string name="paytm_number">Paytm number</string>
    <string name="generate_mpin">Generate MPIN</string>
    <string name="enter_old_mpin">Enter Old MPIN</string>
    <string name="enter_new_mpin">Enter New MPIN</string>
    <string name="re_enter_new_mpin">Confirm New MPIN</string>
    <string name="confirm_mpin">Confirm MPIN</string>
    <string name="update">Update</string>
    <string name="enter_mpin">Enter MPIN</string>
    <string name="add_fund_request">Add Fund Request</string>
    <string name="enter_points">Enter Points</string>
    <string name="send_request">Send Request</string>
    <string name="withdraw_fund_request">Withdraw Fund Request</string>
    <string name="enter_withdraw_points">Enter Points to Add Wallet</string>
    <string name="send_withdraw_request">Send Withdraw Request</string>
    <string name="txt_withdraw_request">Withdrawal Requesting Time Is 10:00am To 5:00pm. Amount Will Be Credited To Your Bank Account In Between 10:00 To 5:00pm Within 24 Hours From Request</string>
    <string name="for_withdraw_related_query_s_call_or_whatsapp">For Withdraw Related Query\'s Call Or Whatsapp</string>
    <string name="kuber_contact">8888888888</string>
    <string name="kuber_fund_withdraw_timing">(Timing 10:00am To 5:00pm)</string>
    <string name="amunt">₹ 0.00</string>
    <string name="sign_up">Sign Up</string>
    <string name="personal_info">Personal Info</string>
    <string name="mpin">MPIN</string>
    <string name="generate">Generate</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="request_otp">Request OTP</string>
    <string name="pin_code">Pin Code</string>
    <string name="add">Add</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="betting_close_for_today">Betting Close For Today</string>
    <string name="double_pana_1_320">* Double Pana :– 1–320</string>
    <string name="triple_pana_1_1000">* Triple Pana :– 1–1000</string>
    <string name="single_digit_1_10">* Single Digit :– 1–10</string>
    <string name="history">History</string>
    <string name="single_pana_1_160">* Single Pana :– 1–160</string>
    <string name="kuber_starline_notification">RATAN777 Notification</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="_179_7">179-7</string>
    <string name="_09_08_2019">09-08 -2019</string>
    <string name="_03_00_pm">03:00 PM</string>
    <string name="game_type">Game Type</string>
    <string name="open">Open</string>
    <string name="submit">Submit</string>
    <string name="add_bank_details">Add Bank</string>
    <string name="ok">Ok</string>
    <string name="pay_by_bank">Get In Bank</string>
    <string name="pay_by_paytm">Get In Paytm</string>
    <string name="single_digit">Single Digit</string>
    <string name="points">Points</string>
    <string name="digits">Digit</string>
    <string name="delete">Delete</string>
    <string name="jodi_digits">Jodi Digits</string>
    <string name="red_bracket">Red Bracket</string>
    <string name="change">Change</string>
    <string name="left_digit">Left Digit</string>
    <string name="middle_digit">Middle Digit</string>
    <string name="right_digit">Right Digit</string>
    <string name="bid_played_toast">*Note: Bid once played will not be Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="jodi_jackpot">Jodi Jackpot</string>
    <string name="red_bracket_jackpot">Red Bracket Jackpot</string>
    <string name="digit_based_jackpot">Digit Based Jackpot</string>
    <string name="group_jackpot">Group Jackpot</string>
    <string name="batting_closed_for_today">Betting Closed For Today</string>
    <string name="batting_is_running_now">Betting Is Running Now</string>
    <string name="jodi">Jodi</string>
    <string name="_500">500</string>
    <string name="_60">60</string>
    <string name="select_bid_type">Select Bid Type</string>
    <string name="select_game_session">Select Game Session</string>
    <string name="madhur_night_open">Madhur Night Open</string>
    <string name="madhur_night_close">Madhur Night Close</string>
    <string name="kuber_jackpot">Jackpot</string>
    <string name="play_game">Play Game</string>
    <string name="select_game_date">Select Game Date</string>
    <string name="name">Full Name</string>
    <string name="request_amount">Fund Amount</string>
    <string name="jackpot_bid_history">Jackpot History</string>
    <string name="fund_request_history">Fund Request\nHistory</string>
    <string name="starline_history">RATAN777 Result History</string>
    <string name="approved_credit_history">Approved Credit History</string>
    <string name="andar_bahar_history">Jackpot Result History</string>
    <string name="kuber_starline">Starline</string>
    <string name="login_with_username_password">Login With Username Password</string>
    <string name="jackpot_andar_bahar_win_ratio">Jackpot (Andar Bahar) Win Ratio</string>
    <string name="game_win_ratio_for_all_bids">Game Win Ratio For All Bids</string>
    <string name="game_rates">Game Rates</string>
    <string name="add_paytm_number">Add Paytm</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="todo">TODO</string>
    <string name="main_notification">Main Notification</string>
    <string name="game_notification">Game Notification</string>
    <string name="starline_notification">Starline Notification</string>
    <string name="andar_bahar_jackpot_notification">Andar Bahar (Jackpot) Notification</string>
    <string name="login_setting">Login Settings</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="cancel_update">Cancel</string>
    <string name="notification">Notification</string>
    <string name="approved_debit_history">Approved Debit History</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login">Login</string>
    <string name="loading">Signing</string>
    <string name="next">Next</string>
    <string name="processing">Processing</string>
    <string name="call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="select_date">Select Date</string>
    <string name="slide_to_cancel">Slide To Cancel</string>
    <string name="live_results">Live Results</string>
    <string name="clear">Clear</string>
    <string name="read_broadcast">Read Broadcast</string>
    <string name="youtube_video">Youtube Video</string>
    <string name="session_message">Your Session Has Been Expired. Login Again To Continue</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_star">*</string>
    <string name="number_zero">0</string>
    <string name="btn_hash">#</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="bid_id">Bid ID</string>
    <string name="digit">Digit</string>
    <string name="fund_amount">Fund Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="brand_online_support_panel">RATAN777 Support</string>
    <string name="confirm_account_number">Confirm account number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user_">Seems you are new here,\nLet’s set up your profile.</string>
    <string name="call_permission">Call Permission</string>
    <string name="call_permission_description">This permission is required for Calling to RATAN777 Customer Support.</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="storage_permission_description">This permission is required for Sharing Images to RATAN777 Customer Support.</string>
    <string name="record_permission">Record Permission</string>
    <string name="record_permission_description">This permission is required for Sending Audio Messages to RATAN777 Customer Support.</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="close">Close</string>
    <string name="mpin_login">MPIN Login</string>
    <string name="not_a_player_">Not a player?</string>
    <string name="signup">Signup</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_number">Enter OTP number</string>
    <string name="a_verification_code_has_been_sent_to_you_mobile_please_check_and_enter_otp">A verification code has been sent to you mobile. Please check and enter OTP</string>
    <string name="continue_">Continue</string>
    <string name="mpin_registration">MPIN Registration</string>
    <string name="provide_a_four_digit_numeric_mpin_to_protect_your_account_against_unauthorized_access">Provide a 4 digit numeric MPIN to protect your account against unauthorized access</string>
    <string name="signup_for_earning">Getting Started</string>
    <string name="register_Text">Register</string>
    <string name="Username">Username</string>
    <string name="first_name">First Name</string>
    <string name="title">Title</string>
    <string name="descrition">Description</string>
    <string name="time">Time</string>
</resources>