<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/cvMorningDashboardHistory"
        android:background="@drawable/dr_ractengle_less_round_ripple_effect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_15sdp">

        <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:background="@drawable/card_bg_round_15_transparent"
            android:elevation="@dimen/_2sdp"
            android:gravity="center"
            android:orientation="vertical">

           <LinearLayout
               android:paddingVertical="@dimen/_12sdp"
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"
               android:layout_alignParentTop="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:id="@+id/txtTitleNotification"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/glacial_bold"
                   android:gravity="start|center_vertical"
                   android:text="@string/title"
                   android:textAlignment="viewStart"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_13sdp" />

               <TextView
                   android:id="@+id/txtNewsDescription"
                   android:layout_marginTop="@dimen/_4sdp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/glacial_regular"
                   android:gravity="start|center_vertical"
                   android:text="@string/descrition"
                   android:textAlignment="viewStart"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_11sdp" />

               <TextView
                   android:layout_marginTop="@dimen/_4sdp"
                   android:id="@+id/tv_time"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/glacial_regular"
                   android:gravity="start|center_vertical"
                   android:text="@string/time"
                   android:textAlignment="viewStart"
                   android:textColor="@color/grayColor"
                   android:textSize="@dimen/_11sdp" />

           </LinearLayout>



        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
